# Lol-Matches

./: .gitignore  README.md  get_matches.py  matches-euw.py  matches-na.py  notes.md  pyproject.toml  utils.py
.github/scripts/: format.sh
.github/workflows/: pr-validation.yaml  test.yaml
databricks/: matches-etl.py
lol_matches/: s3.py  scraper.py  settings.py  utils.py
tests/: test_s3.py  test_scraper.py
