[tool.poetry]
name = "lol_matches"
version = "0.1.0"
description = "Python streamer for league of legends matches"
authors = ["Kean Rawr <the.keanraw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
riotwatcher = "^3.2.0"
boto3 = "^1.20.21"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
main = "get_matches:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
