[tool.poetry]
name = "lol_matches"
version = "0.1.0"
description = "Python streamer for league of legends matches"
authors = ["Kean Rawr <the.keanraw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
riotwatcher = "^3.2.0"
boto3 = "^1.20.21"
scikit-learn = "^1.0.1"
pandas = "^1.3.5"
pyarrow = "^6.0.1"
mlflow = ">=2.6"
matplotlib = "^3.5.1"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^4.1.0"
tox = "^4.9.0"
black = "^23.7.0"

[tool.poetry.scripts]
main = "get_matches:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.paths]
source = ["lol_matches"]

[tool.coverage.run]
branch = true
source = ["lol_matches"]

[tool.coverage.report]
skip_empty = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
skipdist = true

[testenv]
allowlist_externals =
    poetry
    pytest
passenv = *
commands =
    pytest -rP -v --doctest-modules \
        --junit-xml=junit/test-results.xml \
        --cov-report=xml \
        --cov-report=term \
        --ignore=databricks
"""
